tests/invalid/io_in_ite_cond.err_exp
io_in_ite_cond.m:020: In clause for `main(di, uo)':
io_in_ite_cond.m:020:   in argument 1 of call to predicate
io_in_ite_cond.m:020:   `io_in_ite_cond.foo'/2:
io_in_ite_cond.m:020:   mode error: variable `DCG_0' has instantiatedness
io_in_ite_cond.m:020:   `mostly_unique',
io_in_ite_cond.m:020:   expected instantiatedness was `unique'.
